# fastapi-starter-kit

./: .gitignore  .gitlint  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/events/: repositories.py  routes.py  services.py  views.py
app/core/: config.py  server.py
app/core/db/: cache.py  database.py
app/core/errors/: exception_handlers.py  responses.py
app/core/middlewares/: logging_middleware.py  request_id_middleware.py  utils.py
app/core/schema/: base.py
