[project]
name = "fastapi-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.30.6",
    "orjson>=3.10.7",
    "redis[hiredis]",
    "sqlalchemy",
    "uvicorn[standard]",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "ruff",
]
